<resources>
    <string name="app_name">Mi cuenta infonavit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Infonavit client</string>
    <string name="nav_header_subtitle">correo.test@infonavit.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuración</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="menu_saldos_movimientos">Saldos y movimientos</string>
    <string name="menu_aviso_suspension">Aviso de suspensión, retención</string>
    <string name="menu_constancia">Constancia de intereses</string>
    <string name="menu_info_perfil">Información de perfil</string>
    <string name="menu_cerrar_sesion">Cerrar sesión</string>
    <string name="menu_perfil">Mostrar perfil</string>
    <string name="menu_pdf_constancia">Mostrar Constancia PDF</string>
    <string name="menu_pdf_view">Pdf viewer</string>
    <string name="welcome">Bienvenido</string>
    <string name="strDefault_loading">Cargando...</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="contrase_a">Contraseña</string>
    <string name="recuerda_tu_usuario">Recuerda tu usuario</string>
    <string name="hyperlink">¿No tienes cuenta? \n<a href="https://micuenta.infonavit.org.mx/wps/portal/mci2/registro/!ut/p/z1/04_Sj9CPykssy0xPLMnMz0vMAfIjo8ziDVCAo4FTkJGTsYGBu7OJfjghBVEY0sgKgfqjwEqMzBxNnJwMHQ0s3IKdDBwdA4MN3b1CDNx9jaEK8JhRkBthkOmoqAgAXY6VvA!!/dz/d5/L2dJQSEvUUt3QS80TmxFL1o2XzI2QTRCQjFBMDhGU0IwQUFRUzFHSlQwR0U1/">Registrate</a></string>
    <string name="hyperlink2">Para acceder utiliza el mismo usuario y contraseña de <b>Mi cuenta infonavit</b> , si aún no la tienes <a href="https://micuenta.infonavit.org.mx/wps/portal/mci2/registro/!ut/p/z1/04_Sj9CPykssy0xPLMnMz0vMAfIjo8ziDVCAo4FTkJGTsYGBu7OJfjghBVEY0sgKgfqjwEqMzBxNnJwMHQ0s3IKdDBwdA4MN3b1CDNx9jaEK8JhRkBthkOmoqAgAXY6VvA!!/dz/d5/L2dJQSEvUUt3QS80TmxFL1o2XzI2QTRCQjFBMDhGU0IwQUFRUzFHSlQwR0U1/">registrate</a></string>
    <string name="hyperlinkap">Aviso de privacidad</string>
    <string name="menu_ahorro">¿Cuanto ahorro tengo?</string>
    <string name="menu_mensualidades">Mensualidades</string>
    <string name="menu_pay_options">Opciones de pago</string>
    <string name="menu_movimientos">Movimientos</string>
    <string name="menu_datos_credito">Datos de mi crédito</string>
    <string name="savings_title">Este es tu ahorro</string>
    <string name="savings_ahorro">Ahorro total:</string>
    <string name="savings_description">Tu ahorro en el 2019 genera el 7.32% de rendimiento nominal anual</string>
    <string name="tab_1992">1992</string>
    <string name="contribution_ultima_aportacion">Recibida el:</string>
    <string name="contribution_patron_actual">Tu patrón actual es:</string>
    <string name="contribution_ultimo_sueldo">Tu último sueldo</string>
    <string name="contribution_year">Subcuenta de Vivienda</string>
    <string name="contribution_contribution">Aportación</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="NSS_profile">NSS: <![CDATA[<b>%s</b>]]></string>
    <string name="NSS_profiletest">NSS:<b>358759872987987</b></string>
    <string name="Saldos_movimientos"><u>Saldos y movimientos</u></string>
    <string name="pago_de_mi_mensualidad">Pago de mi mensualidad</string>
    <string name="informaci_n_actualizada">Información actualizada:</string>
    <string name="mensualidades"><u>Mensualidades</u></string>
    <string name="cu_nto_debo"><u>¿Cuánto debo?</u></string>
    <string name="pago_para_estar_al_corriente">Pago para estar al corriente</string>
    <string name="tu_pago_se_refleja_10_di_as_despue_s_de_efectuado_consu_ltalo_en_la_seccio_n_mis_movimientos_y_estados_de_cuenta">Tu pago se refleja 10 días después de efectuado; consúltalo en la sección Mis movimientos y estados de cuenta.</string>
    <string name="consulta_los_establecimientos_en_los_que_puedes_realizar_tus_pagos">Consulta los establecimientos en los que puedes realizar tus pagos.</string>
    <string name="saldos_y_movimientos"><u>Saldos y movimientos</u></string>
    <string name="haz_tus_pagos_completos_antes_del_ltimo_d_a_del_mes_actual_si_vas_a_liquidar_tu_cr_dito_paga_directamente_en_cualquier_banco_autorizado">Haz tus pagos completos antes del último día del mes actual. Si vas a liquidar tu crédito, paga directamente en cualquier banco autorizado.</string>
    <string name="pay_banks">Pago en bancos</string>
    <string name="pay_market">Pago en tiendas</string>
    <string name="pay_usa">Pago desde Estados Unidos</string>
    <string name="title_error">Aviso</string>
    <string name="message_server_error">No se pudo obtener los datos del servidor</string>
    <string name="title_retencion">Aviso de suspensión, retención y modificación de descuentos</string>
    <string name="Texto_informacion_importante">Si tienes problemas para obtener tu Aviso de Suspensión y Retención de Descuentos, esta información es importante para ti:\n\nSi tu Aviso no se generara en el portal, se puede deber a alguna de las siguientes situaciones:\nTe encuentras en un proceso de aclaración de homonimia y, por lo tanto, tu aviso te llegará mediante un correo electrónico. No podrás consultarlo en el portal hasta que concluyas tu trámite ante el IMSS y tu Afore, y el Infonavit haya separado los datos de las personas involucradas.\nYa firmaste tu escritura ante el notario pero la descarga de tu aviso está presentando dificultades. Si estás en este caso llama al Infonatel y repórtalo.\nTu crédito es cofinanciado o es Apoyo Infonavit. Recuerda que tu patrón no está obligado a retener de tu salario el pago de la mensualidad de estos créditos y por esta razón no se emite el aviso.\nLiquidaste tu crédito con un patrón diferente al que tenías cuando lo solicitaste o mientras no tenías relación laboral y en tales casos el aviso de suspensión no se le genera.\nTe descuentan tu crédito Infonavit pero no apareces en la cédula bimestral que emite el IMSS y por eso no se expidió tu Aviso de Retención; en este caso repórtalo en Infonatel.\nSi tu Aviso se genera de manera incorrecta en el portal, se puede deber a alguna de las siguientes situaciones:\nAun no concluyes tu trámite de unificación de NSS ante el IMSS y la Afore, y tu aviso sale con el NSS que tenías cuando obtuviste tu crédito. Es importante que agilices tu trámite en la Afore.\nTienes dos avisos de retencíon porque trabajas en dos empresas obligadas a aportar al Infonavit. Comunicate a Infonatel y solicita que el aviso se dirija sólo a uno de tus patrones.\nYa liquidaste tu crédito pero la descarga de tu aviso de suspensión presenta dificultades o sale con los datos erróneos del patrón con el que laboras actualmente. En este caso, llama a Infonatel y repórtalo.</string>
    <string name="Advertencia_pt_1">Por favor revisa que los datos de tu aviso sean correctos:</string>
    <string name="Advertencia_pt_2">Si hay alguna diferencia en los dígitos de tu Número de Seguridad Social (NSS).</string>
    <string name="Advertencia_pt_3">Si tu aviso sale a nombre de una empresa a la que tu no perteneces.</string>
    <string name="Advertencia_pt_4">Comunícate a Infonatel; ahí encontrarás ayuda para solucionar el problema.</string>
    <string name="Pre_text_info_click">Si tienes problemas para obtener tu Aviso de Suspensión y Retención de Descuentos:</string>
    <string name="Text_info_click">está información es importante para ti.</string>
    <string name="Unsucces_text">No tenemos registro de este número de crédito. Si estás haciendo tu trámite para obtenerlo, puedes encontrar tu aviso correspondiente en el portal de:</string>
    <string name="Pre_text_info_trouble">Si tienes problemas para obtener tu Aviso de Suspensión y Retención de Descuentos, está información es importante para ti.</string>
    <string name="constancia_subtitulo1">En apego a nuestra normatividad institucional existen
        periodos en los que podremos entregar la Carta Constancia de intereses actualizada,
        previa solicitud resgistrada por usted; por favor tome en cuenta el sigiente calendario.</string>
    <string name="constancia_subtitulo2">Si para el 17 de septiembre de 2018 usted cuenta con un
        caso de aclaración ya atendido con su información actualizada en nuestros sistemas,
        la Carta de Intereses actualizada la podrá consultar apartir de la 2da semana de diciembre
        de 2018</string>
    <string name="constancia_subtitulo3">Si para el 16 de noviembre de 2018 usted cuenta con un
        caso de aclaración ya atendido con su información actualizada en nuestros sistemas,
        la Carta de Intereses actualizada la podrá consultar apartir de la 2da semana de diciembre
        de 2018</string>
    <string name="elige_anio_fiscal">Elige el año fiscal</string>
    <string name="consultar">Consultar</string>
    <string name="constancia_subtitulo_registro_federal_contribuyentes">El Registro Federal de Contribuyentes
        (RFC) con el que expedimos la constancia de interes para tu declaración anual de impuestos
        es el que tenemos en el Infonavit. Revisalo y, si no es correcto, haz lo siguiente:</string>
    <string name="clabe">CLABE 021180550300050811\nBanco destino: HSBC</string>
    <string name="bank_scotian">I) Paga en línea a través de ScotiaWeb\nII) Acude a la sucursal de tu preferencia y dile al cajero la cantidad a pagar y los 10 dígitos de tu número de crédito.</string>
    <string name="bank_banor">I) Puedes pagar en línea en Banorte por internet.\nII) Acude a la sucursal de tu preferencia y dile al cajero la cantidad a pagar y los 10 dígitos de tu número de crédito.</string>
    <string name="bank_city">I) Paga en línea en BancaNet Banamex.\nII) Acude a la sucursal de tu preferencia y dile al cajero la cantidad a pagar y los 10 dígitos de tu número de crédito.</string>
    <string name="bank_santan">I) Paga en línea a través de Supernet.\nII) Acude a la sucursal de tu preferencia y dile al cajero que deseas depositar en la cuenta 1234 a nombre del Infonavit. Indícale la cantidad a pagar y los 10 dígitos de tu número de crédito.</string>
    <string name="bank_bans">I) Acude a la sucursal de tu preferencia, dale al cajero los 10 dígitos de tu número de crédito e indícale la cantidad a pagar.</string>
    <string name="bank_hsbc">I) Si lo prefieres paga en Banca personal por Internet.\nII) Cajeros automáticos las 24 horas de los 365 días del año. Si quieres hacerlo sólo necesitas los 10 dígitos de tu número de crédito, la cantidad a pagar se descontará del saldo de tu tarjeta de débito HSBC.\nIII) Acude a la sucursal de tu preferencia y dile al cajero que deseas depositar en el RAP 5081 a nombre de Infonavit. Indícale la cantidad a pagar, y cuando te pida el número de referencia, dale los 10 dígitos de tu número de crédito.</string>
    <string name="bank_bbva">I) Pagar en su Banca en línea\nII) Cajeros automáticos las 24 horas de los 365 días del año. Si quieres hacerlo sólo necesitas los 10 dígitos de tu número de crédito; la cantidad a pagar se descontará del saldo de tu tarjeta de débito BBVA Bancomer.\nIII) Practicajas (cajeros receptores) de este banco las 24 horas de los 365 días del año. Si quieres hacerlo sólo necesitas los 10 dígitos de tu número de crédito.\nIV) Acude a la sucursal de tu preferencia dale al cajero los 10 dígitos de tu número de crédito e indícale la cantidad a pagar así como el número de convenio con el Infonavit CIE 828289.</string>
</resources>