<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movements_navigation"
    app:startDestination="@+id/nav_mensualidades">

    <fragment
        android:id="@+id/nav_mensualidades"
        android:name="com.nextia.micuentainfonavit.ui.movements.views.mensualidades.MensualidadesFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_mensualidades">

    </fragment>

    <fragment
        android:id="@+id/nav_pay_options"
        android:name="com.nextia.micuentainfonavit.ui.movements.views.pay_options.PayOptionsFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_pay_options">

    </fragment>

    <fragment
        android:id="@+id/nav_inner_movements"
        android:name="com.nextia.micuentainfonavit.ui.movements.views.movements.InnerMovementsFragment"
        android:label="@string/menu_aviso_suspension"
        tools:layout="@layout/fragment_inner_movements" />

    <fragment
        android:id="@+id/nav_credit_data"
        android:name="com.nextia.micuentainfonavit.ui.movements.views.credit_data.CreditDataFragment"
        android:label="@string/menu_constancia"
        tools:layout="@layout/fragment_constancia" />


</navigation>