<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/title_retencion"
                    style="@style/TxStyleTitle"
                    android:textColor="@android:color/transparent"
                    android:background="@color/light_transparent"

                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:textColor="@android:color/transparent"
                    android:background="@color/light_transparent"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:text="Selecciona un credito:"
                    android:gravity="center"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="12dp"
                    android:textColor="@android:color/transparent"
                    android:background="@color/light_transparent"/>

                <Spinner
                    android:id="@+id/sp_credit"
                    android:layout_gravity="center"
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:textColor="@android:color/transparent"
                    android:background="@color/light_transparent"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:text="@string/Advertencia_pt_1"
                    android:layout_gravity="left"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="12dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/transparent"
                    android:background="@color/light_transparent"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="6dp"
                    android:layout_gravity="left"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="7dp"
                        android:layout_height="7dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginStart="2dp"
                        android:background="@drawable/circle_gray"
                        android:backgroundTint="@android:color/transparent"

                       />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="11sp"
                        android:layout_gravity="center"
                        android:layout_marginStart="3dp"
                        android:text="@string/Advertencia_pt_2"
                        android:textStyle="bold"
                        android:textColor="@android:color/transparent"
                        android:background="@color/light_transparent"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="6dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="7dp"
                        android:layout_height="7dp"
                        android:layout_marginTop="3dp"
                        android:background="@drawable/circle_gray"
                        android:backgroundTint="@color/light_transparent" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="11sp"
                        android:layout_gravity="center"
                        android:layout_marginStart="3dp"
                        android:text="@string/Advertencia_pt_3"
                        android:textStyle="bold"
                        android:textColor="@android:color/transparent"
                        android:background="@color/light_transparent"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:text="@string/Advertencia_pt_4"
                    android:layout_gravity="left"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="6dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/transparent"
                    android:background="@color/light_transparent"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_blue"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="18dp"
                    android:backgroundTint="@color/light_transparent"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Pre_text_info_click"

                    android:layout_gravity="center"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="24dp"
                    android:textColor="@android:color/transparent"
                    android:background="@color/light_transparent"/>


                <TextView
                    android:id="@+id/clickInformacionImportante"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Text_info_click"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:textColor="@android:color/transparent"
                    android:background="@color/light_transparent"

                    />


            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>